--- a/themes/maupassant/layout/base.jade
+++ b/themes/maupassant/layout/base.jade
@@ -16,6 +16,7 @@ if config.feed
 doctype html
 html(lang='#{config.language}')
   head
+    != partial('_custom_ad/google_adsense.js')
     meta(http-equiv='content-type', content='text/html; charset=utf-8')
     meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
     meta(content='yes', name='apple-mobile-web-app-capable')
