--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -24,6 +24,9 @@ head
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create','#{theme.google_analytics}','auto');ga('send','pageview');
+    
+    if config.google_adsense
+        script(data-ad-client=config.google_adsense, async src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
 
     if theme.baidu_analytics
       script.
